# kyma-eventgen

./: BUILD.bazel  WORKSPACE
abandon/: BUILD.bazel  EventUtil.java
eventgen/: BUILD  main.go  serve.go
proto/commerce/: BUILD.bazel  commerce.proto
